Add ordinary list and paragraph

--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
 
     <main>
 
+        <h2>
+            <ol>
+                <li>
+                    Il dipinto che mi ha colpito di più
+                </li>
+                </h2>
+                <img src="./img/quadro.png" alt="quadro">
+                <p>Un opera d'arte affascinante visita nella galleria principale.</p>
+                <p>
+                   Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio raffigurato. &#200 come se raccontasse una storia senza parole.
+                </p>
+            </ol>
+        
+
     </main>
 
     <footer>
