--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </h2>
                 <img src="./img/quadro.png" alt="quadro" aling="right" hspace="40">
                 <br>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Un opera d'arte affascinante visita nella galleria principale.</p>
+                <sup>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Un opera d'arte affascinante visita nella galleria principale.</sup>
                 <p>
                    Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio raffigurato. &#200 come se raccontasse una storia senza parole.
                 </p>
@@ -33,7 +33,8 @@
             </h2>
             
                 <img src="./img/scultura.png" alt="scultura" aling="right" hspace="40">
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Scultura romana in manrmo esposta nella sala archeologica.</p>
+                <br>
+                <sup>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Scultura romana in manrmo esposta nella sala archeologica.</sup>
                 <p>
                     La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e dell'armatura erano incredibilmente realistici.
                 </p>
